# kai-tutorials

./: .gitignore  LICENSE  README.md
tutorials/dinnor/: README.md  pyproject.toml
tutorials/dinnor/data/: address_list.csv  last_year_assignments.csv  last_year_courses.csv
tutorials/dinnor/dinnor/: solve.py  verify.py
tutorials/efficient_image annotation_with_Detic/: showcase_image_annotation_with_detic.ipynb
tutorials/efficient_image_annotation_with_Detic/: README.md  dataset_utils.py  detic_detector.py  showcase_image_annotation_with_detic.ipynb
